@@ -1,0 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST 2.6.0.zip 74795 SHA256 f7df6f48ccbaeba8b7e9f7b23a0d4567d512aef1645dc4a871cb6722ec6219b8 SHA512 35030814532ac2590b79ff8805d4bed1d5a5837c14ba2ac89524ccea6ecdc4403a2d20c588dd707bde0a2a0475489c5c1e8d658124d3cf1aa71d03484f2e5725 WHIRLPOOL 74a94a17938d433b2292f04097171d6b4a7da8a05dd68eeb356cd2364c9e91e4af0481f2170f6ae2ff77e0a6e92da46e5672e5d1750d2902dfd5880e7a8a7a94
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQJ8BAEBCABmBQJThEdhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59QssP/iPyqhvSivZFdXJHBf85aUpm
+6wL/iuBdnQgsEicz7xFaNp+eQCkoEe7vNGNZ9WvAOobkO23zlkOE2TLEZ7vhal4D
+J4fhWvdKANa+1VqmZGSUTZxfcYz/jjnqhEJETB/WKAV45HiElGCQqlypNKYU7iMN
+jvfyf17BWaKUghmVcxuPYrt3AZEDCA9SbQfecQEkyF55hHNnpjeUrEkrLSn/Atiu
+SoA53clNTi837A9TrrMv02BwlOPQWMHNiEm3+zlgfezmxgHzsd2eCr/u+rocvd1V
+tOahiJ82z3eTKySwsuIC7P2cuIv49jDPjlOlT2R6+jNwFwMmBHZC9qO09Oud0xx8
+0rBlVULfrMEjZED3RNcmpduiKSTpMbiFa609d6WYDEMl/IvdkCBYbpD2y7o/doH2
+lqFzPHOtSCXGtJrQpOq4X1xSbXaLi461hPGJbnqIlPuUFMaFLueENdHa3oFHbSRN
+9eMhT9BC2Rgq7Xr/fYYe+i6jsCodSJRuLtmXEZDJB8WVsIeUJeEjZg6NlztkJJ98
+cr7AgLW9RkZ5NGFb5uBW1e7JNpnW47JhTxoy9/vV4YLbw18ueAVvKC6duFYnQ79Y
+BveZ4BnJsQ00SqF2nZL4rU/OTurT+ylVC7ev78UeYL60y4CwMBgGmBdTC8D3mzsY
+xK/sVFHwaDw98kTO70gK
+=Vwn4
+-----END PGP SIGNATURE-----
